fix: Fixed related issues to re-request this plugin on moodle repo
Add backup
Fixed namespacing
Fixed headers

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "vendor_name/filewithwatermark",
   "description": "This plugin add a watermark in a PDF file",
   "minimum-stability": "stable",
-  "license": "proprietary",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
       "name": "Leonardo Aprigio da Silva",
